v0.2.6 - September 29, 2015 - pyldap
------------------------------------

- Use `pyldap <https://pypi.python.org/pypi/pyldap>`_ under Python 3.


v0.2.5 - June 16, 2015 - passwd_s
---------------------------------

- A simple implementation of passwd_s.

- Fixes for DN case-insensitive matching.


v0.2.4 - January 26, 2015 - SSHA fix
------------------------------------

- Support SSHA passwords with salt of arbitrary length.


v0.2.3 - October 23, 2014 - Fix for Windows
-------------------------------------------

- Don't support {CRYPT} passwords if crypt can't be imported.


v0.2.2 - July 21, 2014 - Password hashing
-----------------------------------------

- Add support for {CRYPT} and {SSHA} passwords.

  Thanks to `Dmitri Bogomolov <https://bitbucket.org/g1itch>`_.


v0.2.1 - May 13, 2014 - Fix for rename_s
----------------------------------------

- Raise ldap.ALREADY_EXISTS when renaming an object and the target already
  exists.


v0.2.0 - April 9, 2014 - Experimental Python 3 support
------------------------------------------------------

- mockldap now provides experimental Python 3 support. Python 2.5 was dropped.

  To sum up, mockldap works with Python 2.6, 2.7, 3.3 and 3.4.

  Since python-ldap still isn't making progress toward Python 3, if you're
  using Python 3, you need to install a fork::

      $ pip install git+https://github.com/rbarrois/python-ldap.git@py3

  Thanks to `Aymeric Augustin <https://myks.org/en/>`_ for making this happen.

v0.1.8 - March 31, 2014 - Fixes for modify_s
--------------------------------------------

- A previous fix to modify_s was erroneous. `section 4.6`_ of RFC 4511 states
  that modify operations will create new attributes and delete empty ones as
  necessary.

.. _section 4.6: http://tools.ietf.org/html/rfc4511#section-4.6

.. warning::

    mockldap wil no longer raise `ldap.UNDEFINED_TYPE`. mockldap has no schema
    support, so it assumes that all attributes are valid.
